--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -2,14 +2,39 @@
   display: flex;
  }
  
- .said_bar{
+ .side-bar{
    width: 300px;
    height: 100vh;
    background-color: #253141;
  }
  
+ .side-bar_header{
+  height: 100px;
+ }
+
+ .rooms{
+  height: calc(100vh - 100px);
+  background-color: #2f3e51;
+ }
+
+
  .chat{
-   width: calc(100vw-300px);
+   width: calc(100vw - 300px);
    height: 100vh;
    background-color: #ffffff;
+ }
+
+
+ .chat-header{
+  height: 100px;
+ }
+
+ .messages{
+  height: calc(100vh - 100px - 90px);
+  background-color: #fafafa;
+ }
+
+ .form{
+  height: 90px;
+  background-color: #dddddd;
  }
