--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,10 +1,10 @@
 <div class="wrapper">
 
-<div class = said_bar>
+<div class = "side-bar">
   <%= render "side_bar" %>
 </div>
 
-<div class = chat>
+<div class = "chat">
   <%= render "main_chat" %>
 </div>
 
