--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,3 +1,15 @@
-<div class = "side-bar_header"></div>
+<div class = "side-bar_header">
+<div class = "user-name"><a href ="#">Tom</a></div>
+<div class = "chat-create"><a href ="#">チャットを作成する</a></div>
+</div>
 
-<div class = "rooms"></div>
+<div class = "rooms">
+
+  <div class = "room">
+    <div class = "room-name"><a href ="#">techroom1</a></div>
+  </div>
+  <div class = "room">
+    <div class = "room-name"><a href ="#">techroom2</a></div>
+  </div>
+
+</div>
