--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,8 @@
 <div class = "side-bar_header">
-<div class = "user-name"><a href ="#">Tom</a></div>
+<div class = "user-name">
+      <%= link_to current_user.name, edit_user_path(current_user) %>
+</div>
+
 <div class = "chat-create"><a href ="#">チャットを作成する</a></div>
 </div>
 
